# ecg

./: leap.yaml  leap_binder.py  leap_custom_test.py  pyproject.toml
ecg/: config.py  config.yml
ecg/data/: preprocessing.py
ecg/utils/: gcs_utils.py  metrics.py  packages.py  visualizers.py
models/: cnn_two_heads.h5  patch_12x16.h5
