[tool.poetry]
name = "ecg"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
code-loader = "^1.0.34"
tensorflow = "2.13.1"
tensorflow-macos = "2.13.0"
scikit-learn = "1.3.2"
datasets = "^2.16.1"
torch = "2.1.2"
torchvision = "0.16.2"
onnx = "^1.15.0"
transformers-onnx = "^0.0.2"
keras = "2.13.1"
transformers = "^4.37.2"
wfdb = "^4.1.2"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.14.0"
tensorflow-metal = "1.0.1"
opencv-python = "^4.9.0.80"
ecg-plot = "^0.2.8"
biosppy = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

